Login and Registrations added, server side using node.js and monogoDB added.

--- a/src/app/components/main-page/main-page.component.html
+++ b/src/app/components/main-page/main-page.component.html
@@ -35,6 +35,13 @@
             </a>
           </ng-container>
         </ng-container>
+
+        <span *ngIf="auth.isLoggedIn()">
+          <a  href="#"  mat-button routerLink=""  (click)="auth.logout()">
+            Logout
+          </a>
+          <i class="material-icons right arrow-icons">logout</i>
+        </span>
       </div>
 
 
