--- a/src/styles.scss
+++ b/src/styles.scss
@@ -29,7 +29,10 @@ $documantations-app-theme: mat-light-theme($documantations-app-primary, $documan
 /* You can add global styles to this file, and also import other style files */
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
 
 
 mat-sidenav-container, mat-sidenav-content, mat-sidenav {
