Added Ace Code and Quill editors, preparations for creating and editing documents, frontend

--- a/src/app/components/document/document.component.html
+++ b/src/app/components/document/document.component.html
@@ -1,8 +1,14 @@
 <div class="wrapper col-10">
   <app-inner-header-bar></app-inner-header-bar>
   <div class="body">
+    <hr>
+    <app-code-editor></app-code-editor>
 
 
+    <quill-editor ></quill-editor>
+
+    <hr>
+    <hr>
     <div class="elementor-element elementor-element-7a6f25e elementor-widget elementor-widget-text-editor"
          data-element_type="text-editor.default"
          data-id="7a6f25e">
