--- a/src/app/components/inner-header-bar/inner-header-bar.component.html
+++ b/src/app/components/inner-header-bar/inner-header-bar.component.html
@@ -22,7 +22,7 @@
       <span>
           <i class="material-icons">edit</i>
           <span class="edit-link">
-            <a class="post-edit-link" href="#">Edit</a>
+            <a class="post-edit-link" routerLink="/edit">Edit</a>
           </span>
         </span>
 
