--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -2,7 +2,7 @@
   <ng-container *ngFor="let item of items">
     <!-- Handle main menu items -->
     <ng-container *ngIf="item.below">
-      <button mat-menu-item color="primary" [matMenuTriggerFor]="menu.buildMenu">
+      <button mat-menu-item  [matMenuTriggerFor]="menu.buildMenu">
         {{item.title}}
       </button>
       <app-create-submenu #menu [items]="item.below"></app-create-submenu>
