Preparing forms to create or edit docs pages, half of work

--- a/src/app/components/code-editor/code-editor.component.html
+++ b/src/app/components/code-editor/code-editor.component.html
@@ -1,7 +1,7 @@
 
 
 <ace-editor #editorInfinity
-            [(text)]="contentAutoUpdate"
+            [(text)]="codeStr"
             [autoUpdateContent]="true"
             [options]="{maxLines: 'Infinity'}"
             (textChanged)="onRuleChange($event)"
