--- a/src/app/components/document/document.component.html
+++ b/src/app/components/document/document.component.html
@@ -2,12 +2,7 @@
   <app-inner-header-bar></app-inner-header-bar>
   <div class="body">
     <hr>
-    <app-code-editor></app-code-editor>
-
-
-    <quill-editor ></quill-editor>
-
-    <hr>
+      <app-edit-document [postData]="postData"></app-edit-document>
     <hr>
     <div class="elementor-element elementor-element-7a6f25e elementor-widget elementor-widget-text-editor"
          data-element_type="text-editor.default"
