--- a/src/app/components/inner-header-bar/inner-header-bar.component.html
+++ b/src/app/components/inner-header-bar/inner-header-bar.component.html
@@ -22,11 +22,11 @@
       <span>
           <i class="material-icons">edit</i>
           <span class="edit-link">
-            <a class="post-edit-link" routerLink="/edit">Edit</a>
+            <a class="post-edit-link" (click)="onEdit()">Edit</a>
           </span>
         </span>
 
     </p>
-  </div>
+</div>
 </div>
 <hr>
