--- a/src/app/components/document/document.component.html
+++ b/src/app/components/document/document.component.html
@@ -1,7 +1,6 @@
 <div class="wrapper col-10">
   <app-inner-header-bar (editMode)="editMode($event)"></app-inner-header-bar>
   <div class="body">
-    <hr>
 
     <app-edit-document *ngIf="onEditFlag; else viewMode" [postData]="postData"></app-edit-document>
 
@@ -50,13 +49,12 @@
       <h1>
         Image Viewer
       </h1>
-      <div style="display: flex; flex-direction: row">
+      <div class="image-position">
         <app-image-viewer *ngFor="let parentImg of images" [img]="parentImg"></app-image-viewer>
 
       </div>
     </ng-template>
 
-    <div class="tempalte-if-else" style="width: 100%;height: 200px"></div>
   </div>
 </div>
 
