--- a/src/app/components/document/document.component.scss
+++ b/src/app/components/document/document.component.scss
@@ -2,14 +2,9 @@ body {
   overflow-x: hidden;
 }
 
-
-
 .wrapper {
   padding: 15px;
   margin: 0 auto;
-
-
-
 
   hr {
     border-top: 1px dashed gray;
@@ -152,4 +147,9 @@ body {
     padding-left: 8px !important;
   }
 
+}
+
+.image-position {
+  display: flex;
+  flex-direction: row;
 }
